fixed aos tiles not showing

--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
 margin: 0;
 padding: 0;
@@ -21,7 +21,7 @@ text-rendering: optimizelegibility;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
-}
+} */
 
 .colors-shadow{primary-color:#424242;primary-color-dark:#1c1c1c;primary-color-light:#4f4f4f;accent-color:#00bcd4;accent-color-dark:#009cb0;accent-color-light:#00dcf8;overlay:rgba(0, 0, 0, 0.5);body-color:#fafafa;divider-color:#dddddd;font-color-light:#d5d5d5;font-color-dark:#606060;p-color:#606060;hover-box-shadow:0 15px 25px 0 rgba(0, 0, 0, 0.16), 0 10px 15px 0 rgba(0, 0, 0, 0.12);navigation-box-shadow:0px 0px 3px 1px #1c1c1c;box-shadow:0px 1px 5px 2px #7d7d7d;text-shadow:2px 2px 2px rgba(0, 0, 0, 0.29);card-box-shadow:0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);}
 html, body{margin:0;padding:0;outline:0;display:block;font-family:'Roboto', sans-serif;font-size:15px;background-color:#fafafa;color:#606060;-webkit-overflow-scrolling:touch;-webkit-font-smoothing:subpixel-antialiased;-webkit-text-stroke:1px transparent;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;text-rendering:optimizelegibility;}
